updated height so bookshelf button is visible. few bugs.

--- a/TurnPageRoot/static/css/styles.css
+++ b/TurnPageRoot/static/css/styles.css
@@ -9,12 +9,54 @@ body {
 
 /* BOOKS */
 
+.main-content-container {
+    height: 88vh;
+}
+@media only screen and (max-width: 991px) {
+    .main-content-container {
+        height: 80vh;
+    }
+}
+
+.book-swiping-container {
+    display: flex;
+    padding: 30px;
+    height: 80%; /* 75% of .main-content-container */
+}
+
+.book-col {
+    height: 100%;
+}
+
+.deck {
+    display: grid;
+    grid-template-columns: 1fr;
+    height: 100%; /* 100% of .book-col */
+}
+
+.book {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    height: 100%; /* 100% of .deck */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .book-cover-img {
-    width: 50%;
     object-fit: cover;
+    height: 0;
+    min-height: 100%;
+    max-width: 100%;
     border-radius: 10px;
     box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, .8);
     cursor: pointer;
+}
+
+@media only screen and (max-width: 550px) {
+    .book-cover-img {
+        min-height: 60vw;
+    }
 }
 
 .top-of-stack {
@@ -23,33 +65,6 @@ body {
 
 .top-of-stack:hover {
     transform: translateY(-1rem);
-}
-
-@media only screen and (max-width: 991px) {
-    .book-cover-img {
-        width: 70%;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .book-cover-img {
-        width: 90%;
-    }
-}
-
-.deck {
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
-.book {
-    grid-row-start: 1;
-    grid-column-start: 1;
-}
-
-.book-swiping-container {
-    display: flex;
-    padding: 30px;
 }
 
 .arrows {
@@ -64,18 +79,24 @@ body {
     color: green;
 }
 
+.bookshelf-btn-container {
+    height: 20%;
+}
+
 .hidden {
     display: none;
 }
 
 
 /* NAV BAR */
-.banner {
+.banner, .navbar {
     background-color: #ffcbf0;
+    height: 12vh;
 }
-
-.navbar {
-    background-color: #ffcbf0;
+@media only screen and (max-width: 991px) {
+    .banner, .navbar {
+        height: 10vh;
+    }
 }
 
 .nav-item a:link, .nav-item a:visited {
